--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react-dom": "^18.0.0",
     "framer-motion": "^7.0.1",
     "graphql": "^16.5.0",
+    "graphql-tag": "^2.12.6",
     "react": "^18.2.0",
     "react-device-detect": "^2.2.2",
     "react-dom": "^18.2.0",
