--- a/package.json
+++ b/package.json
@@ -4,13 +4,22 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.6.9",
-    "@chakra-ui/icons": "^2.0.6",
+    "@apollo/react-hooks": "^4.0.0",
+    "@chakra-ui/card": "^2.1.1",
+    "@chakra-ui/icons": "^2.0.13",
     "@chakra-ui/react": "^2.2.6",
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
     "@fontsource/alumni-sans": "^4.5.11",
     "@fontsource/bad-script": "^4.5.8",
+    "@fontsource/handlee": "^4.5.9",
+    "@fontsource/marhey": "^4.5.0",
+    "@fontsource/permanent-marker": "^4.5.7",
     "@fontsource/stint-ultra-condensed": "^4.5.10",
+    "@fortawesome/fontawesome-svg-core": "^6.2.1",
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@svgr/webpack": "^6.5.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -18,6 +27,7 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@types/webpack": "^5.28.0",
     "framer-motion": "^7.0.1",
     "graphql": "^16.5.0",
     "graphql-tag": "^2.12.6",
@@ -26,8 +36,13 @@
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^1.3.0",
+    "react-icons": "^4.7.1",
+    "react-markdown": "^8.0.3",
+    "react-photo-gallery": "^8.0.0",
+    "react-responsive-gallery": "1.2.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "remark-gfm": "^3.0.1",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
