--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fontsource/alumni-sans": "^4.5.11",
     "@fontsource/bad-script": "^4.5.8",
     "@fontsource/handlee": "^4.5.9",
+    "@fontsource/kalam": "^4.5.10",
     "@fontsource/marhey": "^4.5.0",
     "@fontsource/permanent-marker": "^4.5.7",
     "@fontsource/stint-ultra-condensed": "^4.5.10",
@@ -42,6 +43,7 @@
     "react-responsive-gallery": "1.2.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-star-ratings": "^2.3.0",
     "remark-gfm": "^3.0.1",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
